# shorter

./: .gitignore  CHANGELOG.md  README.md  app.conf  docker-compose.yaml  init.sql  makefile  shorter-pg.session.sql  shorter.cabal
app/: Main.hs
sql/: 0001_init.sql
src/: Cache.hs  Command.hs  Db.hs  Handler.hs  Middleware.hs  Storage.hs
