cabal-version:      2.4
name:               shorter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             a.vorobyev
maintainer:         a.vorobyev@oneliya.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Handler
                    , Storage 
                    , Db
                    , Command
                    , Cache
                    , Middleware

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , time
                    , postgresql-simple ^>=0.6.4
                    , utf8-string
                    , bytestring
                    , postgresql-simple-migration
                    , cryptonite
                    , wai
                    , wai-middleware-static
                    , wai-extra
                    , resource-pool ^>=0.2.3.2
                    , scotty
                    , scotty-cookie
                    , http-types
                    , configurator
                    , text
                    , aeson
                    , hedis
                    , smtp-mail
                    , mime-mail
                    , random
                    , split
                    , cookie
                    , containers
                    , case-insensitive
                    
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
      OverloadedStrings

executable shorter
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base ^>=4.14.3.0
                   , shorter
                   , time
                   , postgresql-simple ^>=0.6.4
                   , utf8-string
                   , bytestring
                   , postgresql-simple-migration
                   , cryptonite
                   , wai
                   , wai-middleware-static
                   , wai-extra
                   , resource-pool ^>=0.2.3.2
                   , scotty
                   , scotty-cookie
                   , http-types
                   , configurator
                   , text
                   , aeson
                   , hedis
                   , smtp-mail
                   , mime-mail
                   , random
                   , split
                   , cookie
                   , containers
                   , case-insensitive

    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
      OverloadedStrings
